k8s/ui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: helixobs
spec:
  selector:
    app: ui
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
